[gd_scene load_steps=31 format=3 uid="uid://bq6mgekl3uhqd"]

[ext_resource type="Script" uid="uid://bg32lvbhv4hrd" path="res://script/Player.gd" id="1_4075b"]
[ext_resource type="Texture2D" uid="uid://b2r0mvkhsp544" path="res://assets/GFX/player/MegaMan.png" id="3_nj304"]
[ext_resource type="Texture2D" uid="uid://edx0ys707ioi" path="res://assets/GFX/Effects/hit.png" id="3_wyc4v"]
[ext_resource type="Script" uid="uid://gqljsq5twxeb" path="res://script/States/FSM.gd" id="4_hqtel"]
[ext_resource type="Script" uid="uid://d0mbrt232w4mc" path="res://script/States/Idle.gd" id="5_sweqy"]
[ext_resource type="Script" uid="uid://clmvh0ygo2j6y" path="res://script/States/Walk.gd" id="6_2hs0m"]
[ext_resource type="Script" uid="uid://b3jc5464amaa4" path="res://script/States/Onair.gd" id="7_1jxqw"]
[ext_resource type="Script" uid="uid://b4oywbmu3ncxw" path="res://script/States/Hit.gd" id="8_dw050"]
[ext_resource type="Script" uid="uid://8qhsmw7ukjbn" path="res://script/States/Slide.gd" id="9_b26j0"]
[ext_resource type="Script" uid="uid://cocixu83ngs8b" path="res://script/States/Dead.gd" id="10_n7ghd"]

[sub_resource type="Animation" id="Animation_y4kaq"]
resource_name = "Damage"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_hpw50"]
resource_name = "Idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="Animation" id="Animation_jfgif"]
resource_name = "Jump"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_1g8eo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_gm1xq"]
resource_name = "Slide"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_b8uwb"]
resource_name = "Tipping"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_xtd5c"]
resource_name = "Walk"
length = 0.48
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.12, 0.24, 0.36),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_w7ik5"]
resource_name = "shoot_idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [10, 11, 10]
}

[sub_resource type="Animation" id="Animation_wm6rk"]
resource_name = "shoot_jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_osa1q"]
resource_name = "shoot_walk"
length = 0.48
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.12, 0.24, 0.36),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5xxjd"]
_data = {
&"Damage": SubResource("Animation_y4kaq"),
&"Idle": SubResource("Animation_hpw50"),
&"Jump": SubResource("Animation_jfgif"),
&"RESET": SubResource("Animation_1g8eo"),
&"Slide": SubResource("Animation_gm1xq"),
&"Tipping": SubResource("Animation_b8uwb"),
&"Walk": SubResource("Animation_xtd5c"),
&"shoot_idle": SubResource("Animation_w7ik5"),
&"shoot_jump": SubResource("Animation_wm6rk"),
&"shoot_walk": SubResource("Animation_osa1q")
}

[sub_resource type="Animation" id="Animation_3w4gp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_o0j23"]
resource_name = "flickering"
length = 0.06
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bhkr8"]
_data = {
&"RESET": SubResource("Animation_3w4gp"),
&"flickering": SubResource("Animation_o0j23")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4rnrp"]
size = Vector2(14, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yy37y"]
size = Vector2(14, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u011g"]
size = Vector2(6, 6)

[sub_resource type="Animation" id="Animation_0g66m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_a4s8h"]
resource_name = "vis"
length = 0.06
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cimx4"]
_data = {
&"RESET": SubResource("Animation_0g66m"),
&"vis": SubResource("Animation_a4s8h")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 10
collision_mask = 27
script = ExtResource("1_4075b")

[node name="Sprite" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, -4)
texture = ExtResource("3_nj304")
hframes = 10
vframes = 2
region_rect = Rect2(-2, -2, 32, 32)
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_5xxjd")
}

[node name="Flickering" type="AnimationPlayer" parent="Sprite"]
libraries = {
&"": SubResource("AnimationLibrary_bhkr8")
}

[node name="Collision" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_4rnrp")
metadata/_edit_lock_ = true

[node name="SlidingColl" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_yy37y")
disabled = true

[node name="Raycast" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(-7, 0)
target_position = Vector2(0, -8)

[node name="Raycast2" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(7, 0)
target_position = Vector2(0, -8)

[node name="Shootpos" type="Marker2D" parent="."]
position = Vector2(13, 3)

[node name="waterdetect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="waterdetect"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_u011g")

[node name="Bubble" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="HitSprite" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("3_wyc4v")

[node name="Anim" type="AnimationPlayer" parent="HitSprite"]
libraries = {
&"": SubResource("AnimationLibrary_cimx4")
}

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
offset_top = -32.0
offset_right = 40.0
offset_bottom = -9.0
theme_override_colors/font_color = Color(0, 1, 0, 1)

[node name="Invincibility" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SlidingTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="ShootingTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.25
one_shot = true

[node name="FSM" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_hqtel")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="FSM"]
script = ExtResource("5_sweqy")

[node name="Onair" type="Node" parent="FSM"]
script = ExtResource("7_1jxqw")

[node name="Walk" type="Node" parent="FSM"]
script = ExtResource("6_2hs0m")

[node name="Hit" type="Node" parent="FSM"]
script = ExtResource("8_dw050")

[node name="Slide" type="Node" parent="FSM"]
script = ExtResource("9_b26j0")

[node name="Dead" type="Node" parent="FSM"]
script = ExtResource("10_n7ghd")

[connection signal="body_entered" from="waterdetect" to="." method="_on_waterdetect_body_entered"]
[connection signal="body_exited" from="waterdetect" to="." method="_on_waterdetect_body_exited"]
[connection signal="timeout" from="Bubble" to="." method="_on_bubble_timeout"]
[connection signal="timeout" from="Invincibility" to="." method="_on_invincibility_timeout"]
[connection signal="timeout" from="SlidingTimer" to="." method="_on_sliding_timer_timeout"]
[connection signal="timeout" from="ShootingTimer" to="FSM" method="_on_shooting_timer_timeout"]
